--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -9,18 +9,18 @@
                 <form action="../partida/validarRespuesta" method="POST">
                     <div class="row mb-4">
                         <div class="col-6">
-                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="1" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_1}}</button>
+                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_1}}" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_1}}</button>
                         </div>
                         <div class="col-6">
-                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="2" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_2}}</button>
+                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_2}}" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_2}}</button>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6">
-                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="3" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_3}}</button>
+                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_3}}" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_3}}</button>
                         </div>
                         <div class="col-6">
-                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="4" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_4}}</button>
+                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_4}}" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_4}}</button>
                         </div>
                     </div>
                     <button type="submit" id="hiddenSubmit" name="opcion" value="5" style="display: none;"></button>
