--- a/view/informesView.mustache
+++ b/view/informesView.mustache
@@ -2,7 +2,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 
 <!-- HACER FUNCIONAR BIEN EL RESPONSIVE! -->
-<main class="flex-grow-1 d-flex align-items-center justify-content-around">
+<main class="flex-grow-1 d-flex flex-wrap align-items-center justify-content-around">
     <div class="dashboard-container shadow p-4 bg-light rounded">
         <h2 class="text-center mb-4">Seleccione una opción</h2>
         <div class="d-grid gap-3">
@@ -87,6 +87,7 @@
                     <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
                 </div>
             </div>
+        <div id="contenidoPDF">
             <canvas id="miGraficoTorta" width="500" height="500"
                     data-labels='{{labels}}'
                     data-data='{{data}}'
@@ -94,6 +95,18 @@
                     data-chart-text='{{chartText}}'
                     data-nombre-funcion='{{nombreFuncion}}'>
             </canvas>
+        </div>
+            <div class="dropdown mt-4 text-center">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="downloadButton"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                    Descargar Gráfico
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="downloadButton">
+                    <li><a class="dropdown-item" href="#" data-format="jpg">JPG</a></li>
+                    <li><a class="dropdown-item" href="#" data-format="png">PNG</a></li>
+                    <li><a class="dropdown-item" href="#" data-format="pdf">PDF</a></li>
+                </ul>
+            </div>
         </div>
         <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXPais}}
@@ -129,6 +142,7 @@
                     <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
                 </div>
             </div>
+        <div id="contenidoPDF">
             <canvas id="miGraficoTorta" width="500" height="500"
                     data-labels='{{labels}}'
                     data-data='{{data}}'
@@ -136,6 +150,18 @@
                     data-chart-text='{{chartText}}'
                     data-nombre-funcion='{{nombreFuncion}}'>
             </canvas>
+        </div>
+            <div class="dropdown mt-4 text-center">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="downloadButton"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                    Descargar Gráfico
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="downloadButton">
+                    <li><a class="dropdown-item" href="#" data-format="jpg">JPG</a></li>
+                    <li><a class="dropdown-item" href="#" data-format="png">PNG</a></li>
+                    <li><a class="dropdown-item" href="#" data-format="pdf">PDF</a></li>
+                </ul>
+            </div>
         </div>
         <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXSexo}}
@@ -171,6 +197,7 @@
                     <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
                 </div>
             </div>
+        <div id="contenidoPDF">
             <canvas id="miGraficoTorta" width="500" height="500"
                     data-labels='{{labels}}'
                     data-data='{{data}}'
@@ -178,6 +205,18 @@
                     data-chart-text='{{chartText}}'
                     data-nombre-funcion='{{nombreFuncion}}'>
             </canvas>
+        </div>
+            <div class="dropdown mt-4 text-center">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="downloadButton"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                    Descargar Gráfico
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="downloadButton">
+                    <li><a class="dropdown-item" href="#" data-format="jpg">JPG</a></li>
+                    <li><a class="dropdown-item" href="#" data-format="png">PNG</a></li>
+                    <li><a class="dropdown-item" href="#" data-format="pdf">PDF</a></li>
+                </ul>
+            </div>
         </div>
         <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXGrupoEdad}}
@@ -237,7 +276,7 @@
             </div>
         </div>
         <script src="../public/js/graficos.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     {{/mostrarPorcentajePreguntasCorrectas}}
 </main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
