--- a/view/editorView.mustache
+++ b/view/editorView.mustache
@@ -40,6 +40,7 @@
                         {{#reportadas}}
                             <form action="/editor/darDeAltaPregunta" method="POST" style="display: inline;">
                                 <input type="hidden" name="id" value="{{id}}">
+                                <input type="hidden" name="es_reportada" value="true">
                                 <button type="submit" class="btn btn-success">Dar de alta</button>
                             </form>
                         {{/reportadas}}
