se arreglaron los progresBar de Partida, se mejoro el diseño responsive y ahora al hacer click en los QR se amplifican

--- a/view/crearPreguntaView.mustache
+++ b/view/crearPreguntaView.mustache
@@ -41,7 +41,7 @@
             <div class="mb-3">
                 <label for="opcionCorrecta" class="form-label">Opción Correcta</label>
                 <select class="form-select" id="opcionCorrecta" name="opcionCorrecta" required>
-                    <option value="" selected disabled>Seleccione la opción correcta</option>'
+                    <option value="" selected disabled>Seleccione la opción correcta</option>
                     <option value="1">Opción 1</option>
                     <option value="2">Opción 2</option>
                     <option value="3">Opción 3</option>
@@ -52,7 +52,7 @@
             <div class="mb-3">
                 <label for="categoria" class="form-label">Categoría</label>
                 <select class="form-select" id="categoria" name="categoria" required>
-                    <option value="" selected disabled>Seleccione la categoría</option>'
+                    <option value="" selected disabled>Seleccione la categoría</option>
                     {{#categorias}}
                         <option value="{{.}}">{{.}}</option>
                     {{/categorias}}
@@ -62,8 +62,10 @@
             <input type="hidden" id="opcionCorrectaTexto" name="opcionCorrectaTexto">
 
             <div class="btn-center">
-                <button type="submit" class="btn btn-primary w-25 mx-2">Crear Pregunta</button>
-                <button type="button" class="btn btn-secondary w-25 mx-2" onclick="window.location.href='/usuario/home'">Volver</button>
+                <button type="submit" class="btn btn-primary mx-2 mb-2">Crear Pregunta</button>
+                <button type="button" class="btn btn-secondary mx-2 mb-2"
+                        onclick="window.location.href='/usuario/home'">Volver
+                </button>
             </div>
         </form>
     </div>
