--- a/view/header.mustache
+++ b/view/header.mustache
@@ -14,39 +14,46 @@
 <header class="header-gradient">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <div class="d-flex align-items-center w-100">
+            <div class="d-flex align-items-center flex-grow-1">
+                <div class="d-flex flex-row align-items-center">
+                    <a class="navbar-brand d-flex align-items-center" href="/usuario/home">
+                        <img src="/public/logo/question.png" alt="Logo" height="40">
+                        <span class="ms-3">PreguntadosJR</span>
+                    </a>
 
-            <a class="navbar-brand d-flex align-items-center ms-auto" href="/usuario/home">
-                <img src="/public/logo/question.png" alt="Logo" height="40">
-                <span class="ms-3">PreguntadosJR</span>
-            </a>
+                    <div class="dropdown d-lg-none me-1">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                            Menú
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li><a class="dropdown-item" href="/partida/nueva">Juego</a></li>
+                            <li><a class="dropdown-item" href="#">Instrucciones</a></li>
+                            <li><a class="dropdown-item" href="#">Contacto</a></li>
+                            {{#logged_in}}
+                                <li><a class="dropdown-item" href="/usuario/search">Perfil</a></li>
+                            {{/logged_in}}
+                        </ul>
+                    </div>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                </div>
 
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-3">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/partida/nueva">Juego</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Instrucciones</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
+                <div class="navbar-nav d-none d-lg-flex flex-row ms-4" style="gap: 10px;">
+                    <a class="nav-link" href="/partida/nueva">Juego</a>
+                    <a class="nav-link" href="#">Instrucciones</a>
+                    <a class="nav-link" href="#">Contacto</a>
                     {{#logged_in}}
-                        <li class="nav-item">
-                            <a class="nav-link" href="/usuario/search">Perfil</a>
-                        </li>
+                        <a class="nav-link" href="/usuario/search">Perfil</a>
                     {{/logged_in}}
-                </ul>
-            </div>
-                <div class="d-flex align-items-center">
+                </div>
+                <div class="d-flex align-items-center ms-auto me-1">
                     {{#logged_in}}
-                        <a class="btn btn-secondary mb-0" href="/usuario/logout">Cerrar Sesión</a>
+                        <a class="btn btn-secondary d-lg-none" href="/usuario/logout">
+                            <img src="../public/icons/logout.svg" alt="logout" width="24">
+                        </a>
+                        <a class="btn btn-secondary d-none d-lg-inline mb-0" href="/usuario/logout">
+                            Cerrar Sesión
+                        </a>
                     {{/logged_in}}
                 </div>
             </div>
