--- a/view/informesView.mustache
+++ b/view/informesView.mustache
@@ -56,7 +56,7 @@
         </div>
     {{/cantUsuariosNuevos}}
     {{#mostrarUsuariosXPais}}
-        <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
+        <div class="table-responsive shadow mt-4 mt-sm-0" style="max-width: 90%; max-height: 400px; overflow-y: auto;">
             <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
                 <thead class="table-secondary align-middle">
                 <tr>
@@ -75,27 +75,29 @@
             </table>
         </div>
 
-        <div class="chart-container shadow p-4 bg-light rounded">
+        <div class="chart-container shadow p-4 bg-light rounded mt-4 mt-sm-0" style="max-width: 90%;">
             <div class="row mb-3 text-center">
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
+                    <label>Desde</label>
                     <input type="date" id="fecha_inicio" class="form-control" placeholder="Fecha de inicio">
                 </div>
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
+                    <label>Hasta</label>
                     <input type="date" id="fecha_fin" class="form-control" placeholder="Fecha de fin">
                 </div>
-                <div class="col-md-4">
-                    <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
+                <div class="col-12 col-md-4 mt-2 mt-sm-0">
+                    <button class="btn btn-primary w-75 h-100" id="filtrar_btn">Filtrar</button>
                 </div>
             </div>
-        <div id="contenidoPDF">
-            <canvas id="miGraficoTorta" width="500" height="500"
-                    data-labels='{{labels}}'
-                    data-data='{{data}}'
-                    data-chart-label='{{chartLabel}}'
-                    data-chart-text='{{chartText}}'
-                    data-nombre-funcion='{{nombreFuncion}}'>
-            </canvas>
-        </div>
+            <div id="contenidoPDF">
+                <canvas id="miGraficoTorta" width="100%" height="500"
+                        data-labels='{{labels}}'
+                        data-data='{{data}}'
+                        data-chart-label='{{chartLabel}}'
+                        data-chart-text='{{chartText}}'
+                        data-nombre-funcion='{{nombreFuncion}}'>
+                </canvas>
+            </div>
             <div class="dropdown mt-4 text-center">
                 <button class="btn btn-primary dropdown-toggle" type="button" id="downloadButton"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -111,7 +113,7 @@
         <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXPais}}
     {{#mostrarUsuariosXSexo}}
-        <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
+        <div class="table-responsive shadow mt-4 mt-sm-0" style="max-width: 90%; max-height: 400px; overflow-y: auto;">
             <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
                 <thead class="table-secondary align-middle">
                 <tr>
@@ -130,27 +132,29 @@
             </table>
         </div>
 
-        <div class="chart-container shadow p-4 bg-light rounded">
+        <div class="chart-container shadow p-4 bg-light rounded mt-4 mt-sm-0" style="max-width: 90%;">
             <div class="row mb-3 text-center">
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
+                    <label>Desde</label>
                     <input type="date" id="fecha_inicio" class="form-control" placeholder="Fecha de inicio">
                 </div>
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
+                    <label>Hasta</label>
                     <input type="date" id="fecha_fin" class="form-control" placeholder="Fecha de fin">
                 </div>
-                <div class="col-md-4">
-                    <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
+                <div class="col-12 col-md-4 mt-2 mt-sm-0">
+                    <button class="btn btn-primary w-75 h-100" id="filtrar_btn">Filtrar</button>
                 </div>
             </div>
-        <div id="contenidoPDF">
-            <canvas id="miGraficoTorta" width="500" height="500"
-                    data-labels='{{labels}}'
-                    data-data='{{data}}'
-                    data-chart-label='{{chartLabel}}'
-                    data-chart-text='{{chartText}}'
-                    data-nombre-funcion='{{nombreFuncion}}'>
-            </canvas>
-        </div>
+            <div id="contenidoPDF">
+                <canvas id="miGraficoTorta" width="100%" height="500"
+                        data-labels='{{labels}}'
+                        data-data='{{data}}'
+                        data-chart-label='{{chartLabel}}'
+                        data-chart-text='{{chartText}}'
+                        data-nombre-funcion='{{nombreFuncion}}'>
+                </canvas>
+            </div>
             <div class="dropdown mt-4 text-center">
                 <button class="btn btn-primary dropdown-toggle" type="button" id="downloadButton"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -166,7 +170,7 @@
         <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXSexo}}
     {{#mostrarUsuariosXGrupoEdad}}
-        <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
+        <div class="table-responsive shadow mt-4 mt-sm-0" style="max-width: 90%; max-height: 400px; overflow-y: auto;">
             <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
                 <thead class="table-secondary align-middle">
                 <tr>
@@ -185,27 +189,29 @@
             </table>
         </div>
 
-        <div class="chart-container shadow p-4 bg-light rounded">
+        <div class="chart-container shadow p-4 bg-light rounded mt-4 mt-sm-0" style="max-width: 90%;">
             <div class="row mb-3 text-center">
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
+                    <label>Desde</label>
                     <input type="date" id="fecha_inicio" class="form-control" placeholder="Fecha de inicio">
                 </div>
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
+                    <label>Hasta</label>
                     <input type="date" id="fecha_fin" class="form-control" placeholder="Fecha de fin">
                 </div>
-                <div class="col-md-4">
-                    <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
+                <div class="col-12 col-md-4 mt-2 mt-sm-0">
+                    <button class="btn btn-primary w-75 h-100" id="filtrar_btn">Filtrar</button>
                 </div>
             </div>
-        <div id="contenidoPDF">
-            <canvas id="miGraficoTorta" width="500" height="500"
-                    data-labels='{{labels}}'
-                    data-data='{{data}}'
-                    data-chart-label='{{chartLabel}}'
-                    data-chart-text='{{chartText}}'
-                    data-nombre-funcion='{{nombreFuncion}}'>
-            </canvas>
-        </div>
+            <div id="contenidoPDF">
+                <canvas id="miGraficoTorta" width="100%" height="500"
+                        data-labels='{{labels}}'
+                        data-data='{{data}}'
+                        data-chart-label='{{chartLabel}}'
+                        data-chart-text='{{chartText}}'
+                        data-nombre-funcion='{{nombreFuncion}}'>
+                </canvas>
+            </div>
             <div class="dropdown mt-4 text-center">
                 <button class="btn btn-primary dropdown-toggle" type="button" id="downloadButton"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -221,7 +227,7 @@
         <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXGrupoEdad}}
     {{#mostrarPorcentajePreguntasCorrectas}}
-        <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
+        <div class="table-responsive shadow mt-4 mt-sm-0" style="max-width: 90%; max-height: 400px; overflow-y: auto;">
             <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
                 <thead class="table-secondary align-middle">
                 <tr>
@@ -241,20 +247,22 @@
                 </tbody>
             </table>
         </div>
-        <div class="chart-container shadow p-4 bg-light rounded">
+        <div class="chart-container shadow p-4 bg-light rounded mt-4 mt-sm-0" style="max-width: 90%;">
             <div class="row mb-3 text-center">
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
+                    <label>Desde</label>
                     <input type="date" id="fecha_inicio" class="form-control" placeholder="Fecha de inicio">
                 </div>
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
+                    <label>Hasta</label>
                     <input type="date" id="fecha_fin" class="form-control" placeholder="Fecha de fin">
                 </div>
-                <div class="col-md-4">
-                    <button class="btn btn-primary w-75" id="filtrar_btn">Filtrar</button>
+                <div class="col-12 col-md-4 mt-2 mt-sm-0">
+                    <button class="btn btn-primary w-75 h-100" id="filtrar_btn">Filtrar</button>
                 </div>
             </div>
             <div id="contenidoPDF">
-                <canvas id="miGraficoTorta" width="500" height="500"
+                <canvas id="miGraficoTorta" width="100%" height="500"
                         data-labels='{{labels}}'
                         data-data='{{data}}'
                         data-chart-label='{{chartLabel}}'
