--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -1,5 +1,6 @@
 <main class="flex-grow-1 d-flex align-items-center justify-content-center">
-    <div class="dashboard-container shadow p-4 bg-light rounded" style="background-image: linear-gradient({{color}}, white);">
+    <div class="dashboard-container shadow p-4 bg-light rounded"
+         style="background-image: linear-gradient({{color}}, white);">
         {{#pregunta}}
             <div class="question-container text-center">
                 <div class="mb-2">
@@ -9,18 +10,22 @@
                 <form action="../partida/validarRespuesta" method="POST">
                     <div class="row mb-4">
                         <div class="col-6">
-                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_1}}" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_1}}</button>
+                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_1}}"
+                                    {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_1}}</button>
                         </div>
                         <div class="col-6">
-                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_2}}" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_2}}</button>
+                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_2}}"
+                                    {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_2}}</button>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6">
-                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_3}}" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_3}}</button>
+                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_3}}"
+                                    {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_3}}</button>
                         </div>
                         <div class="col-6">
-                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_4}}" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_4}}</button>
+                            <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="{{opcion_4}}"
+                                    {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_4}}</button>
                         </div>
                     </div>
                     <button type="submit" id="hiddenSubmit" name="opcion" value="5" style="display: none;"></button>
@@ -38,11 +43,24 @@
                     <div class="alert alert-info" role="alert">
                         +1 Punto - Tu puntaje: {{puntaje}}
                     </div>
+                    <div class="mt-4">
+                        <div class="row">
+                            <div class="col-6 mb-2">
+                                <button type="button" id="reportar" class="btn btn-danger w-100" data-bs-toggle="modal"
+                                        data-bs-target="#reportModal">Reportar
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="progress mt-3">
-                        <div id="progress-bar2" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div id="progress-bar2" class="progress-bar progress-bar-striped progress-bar-animated"
+                             role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
+                             aria-valuemax="100"></div>
                     </div>
                     <div class="col-6 mb-2">
-                        <button type="button" style="display: none" id="pregunta32" class="btn btn-success w-100" onclick="window.location.href='../partida/traerPregunta'">Siguiente pregunta</button>
+                        <button type="button" style="display: none" id="pregunta32" class="btn btn-success w-100"
+                                onclick="window.location.href='../partida/traerPregunta'">Siguiente pregunta
+                        </button>
                     </div>
                 {{/correcta}}
                 {{^correcta}}
@@ -55,10 +73,14 @@
                     <div class="mt-4">
                         <div class="row">
                             <div class="col-6 mb-2">
-                                <button type="button" class="btn btn-danger w-100" data-bs-toggle="modal" data-bs-target="#reportModal">Reportar</button>
+                                <button type="button" class="btn btn-danger w-100" data-bs-toggle="modal"
+                                        data-bs-target="#reportModal">Reportar
+                                </button>
                             </div>
                             <div class="col-6 mb-2">
-                                <button type="button" class="btn btn-success w-100" onclick="window.location.href='../usuario/home'">Al home</button>
+                                <button type="button" class="btn btn-success w-100"
+                                        onclick="window.location.href='../usuario/home'">Al home
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -67,7 +89,9 @@
         {{/respuestaDada}}
         {{^respuestaDada}}
             <div class="progress mt-3">
-                <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated"
+                     role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
+                     aria-valuemax="100"></div>
             </div>
         {{/respuestaDada}}
     </div>
