--- a/view/registrarView.mustache
+++ b/view/registrarView.mustache
@@ -1,78 +1,84 @@
-
 <div class="container my-5 ">
     <div class="form-container">
         <h2 class="text-center mb-4">Formulario de Registro</h2>
-    <form action="/usuario/procesarRegistro" method="POST" enctype="multipart/form-data" onsubmit="return validateForm();">
+        <form action="/usuario/procesarRegistro" method="POST" enctype="multipart/form-data"
+              onsubmit="return validateForm();">
 
-        <div class="mb-3">
-            <label for="username" class="form-label">Nombre de Usuario</label>
-            <input type="text" class="form-control" id="username" name="username" required oninput="checkUsername();">
-            <div id="usernameError" class="text-danger mt-2" style="display:none;">Este nombre de usuario ya está en uso.</div>
-        </div>
+            <div class="mb-3">
+                <label for="username" class="form-label">Nombre de Usuario</label>
+                <input type="text" class="form-control" id="username" name="username" required
+                       oninput="checkUsername();">
+                <div id="usernameError" class="text-danger mt-2" style="display:none;">Este nombre de usuario ya está en
+                    uso.
+                </div>
+            </div>
 
-        <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="password" name="password" required>
-        </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
 
-        <div class="mb-3">
-            <label for="password" class="form-label">Repetir Contraseña</label>
-            <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
-            <div id="passwordError" class="text-danger mt-2" style="display:none;">Las contraseñas no coinciden.</div>
-        </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Repetir Contraseña</label>
+                <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+                <div id="passwordError" class="text-danger mt-2" style="display:none;">Las contraseñas no coinciden.
+                </div>
+            </div>
 
-        <div class="mb-3">
-            <label for="fullname" class="form-label">Nombre Completo</label>
-            <input type="text" class="form-control" id="fullname" name="fullname" required>
-        </div>
+            <div class="mb-3">
+                <label for="fullname" class="form-label">Nombre Completo</label>
+                <input type="text" class="form-control" id="fullname" name="fullname" required>
+            </div>
 
-        <div class="mb-3">
-            <label for="birthyear" class="form-label">Año de Nacimiento</label>
-            <input type="date" class="form-control" id="birthyear" name="birthyear" min="1900" max="2024" required>
-        </div>
+            <div class="mb-3">
+                <label for="birthyear" class="form-label">Año de Nacimiento</label>
+                <input type="date" class="form-control" id="birthyear" name="birthyear" min="1900" max="2024" required>
+            </div>
 
-        <div class="mb-3">
-            <label for="sexo" class="form-label">Sexo</label>
-            <select class="form-select" id="sexo" name="sexo" required>
-                <option value="">Selecciona tu sexo</option>
-                <option value="M">Masculino</option>
-                <option value="F">Femenino</option>
-                <option value="O">Otro</option>
-            </select>
-        </div>
+            <div class="mb-3">
+                <label for="sexo" class="form-label">Sexo</label>
+                <select class="form-select" id="sexo" name="sexo" required>
+                    <option value="">Selecciona tu sexo</option>
+                    <option value="M">Masculino</option>
+                    <option value="F">Femenino</option>
+                    <option value="O">Otro</option>
+                </select>
+            </div>
 
-        <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-        </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
 
-        <div class="mb-3">
-            <label class="form-label">Selecciona tu País y Ciudad</label>
-            <div id="map"></div>
-            <input type="hidden" id="country" name="country" required>
-            <input type="hidden" id="city" name="city" required>
-        </div>
+            <div class="mb-3">
+                <label class="form-label">Selecciona tu País y Ciudad</label>
+                <div id="map"></div>
+                <input type="hidden" id="country" name="country" required>
+                <input type="hidden" id="city" name="city" required>
+            </div>
 
-        <div class="mb-3">
-            <label for="selectedCountry" class="form-label">País</label>
-            <input type="text" class="form-control" id="selectedCountry" readonly required>
-        </div>
+            <div class="mb-3">
+                <label for="selectedCountry" class="form-label">País</label>
+                <input type="text" class="form-control" id="selectedCountry" readonly required>
+            </div>
 
-        <div class="mb-3">
-            <label for="selectedProvince" class="form-label">Ciudad</label>
-            <input type="text" class="form-control" id="selectedCity" readonly required>
-        </div>
+            <div class="mb-3">
+                <label for="selectedProvince" class="form-label">Ciudad</label>
+                <input type="text" class="form-control" id="selectedCity" readonly required>
+            </div>
 
-        <div class="mb-3">
-            <label class="form-label" for="image">Suba la imagen de su perfil:</label>
-            <input type="file" class="form-control" id="image" name="image" required>
-        </div>
-        <div class="btn-center">
-            <button type="submit" class="btn btn-primary w-25 mx-2  ">Registrarse</button>
-            <button type="button" class="btn btn-secondary w-25 mx-2" onclick="window.location.href='/usuario/login'">Volver</button>
-        </div>
-    </form>
-</div>
+            <div class="mb-3">
+                <label class="form-label" for="image">Suba la imagen de su perfil:</label>
+                <input type="file" class="form-control" id="image" name="image" required>
+            </div>
+            <div class="btn-center">
+                <button type="submit" class="btn btn-primary mx-2 mb-2  ">Registrarse</button>
+                <button type="button" class="btn btn-secondary mx-2 mb-2"
+                        onclick="window.location.href='/usuario/login'">Volver
+                </button>
+            </div>
+        </form>
+    </div>
 </div>
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 <script src="../public/js/mapaRegistro.js"></script>
