--- a/view/registroView.mustache
+++ b/view/registroView.mustache
@@ -16,10 +16,10 @@
     <input type="radio" id="sexo_f" name="sexo" value="F" required> Femenino<br>
 
     <label for="pais">País:</label>
-    <!-- <input type="text" id="pais" name="pais" required><br> --!>
+    <!-- <input type="text" id="pais" name="pais" required><br> -->
     <br>
     <label for="ciudad">Ciudad:</label>
-    <!-- <input type="text" id="ciudad" name="ciudad" required><br> --!>
+    <!-- <input type="text" id="ciudad" name="ciudad" required><br> -->
     <br>
     <label for="mail">Correo electrónico:</label>
     <input type="email" id="mail" name="mail" required><br>
