--- a/view/registrarView.mustache
+++ b/view/registrarView.mustache
@@ -74,7 +74,7 @@
             <div class="btn-center">
                 <button type="submit" class="btn btn-primary mx-2 mb-2  ">Registrarse</button>
                 <button type="button" class="btn btn-secondary mx-2 mb-2"
-                        onclick="window.location.href='/usuario/login'">Volver
+                        onclick="window.location.href='/'">Volver
                 </button>
             </div>
         </form>
