--- a/view/historialView.mustache
+++ b/view/historialView.mustache
@@ -1,12 +1,12 @@
 <main class="flex-grow-1 d-flex flex-column align-items-center justify-content-center">
-    <div class="text-center mb-4 p-4 bg-white rounded shadow" style="max-width: 600px; width: 100%;">
+    <div class="card-container text-center mb-4 p-4 rounded shadow" style="max-width: 600px; width: 100%;">
         {{#usuario}}
             <h2>{{nombre_usuario}}</h2>
             <img src="{{foto_perfil}}" alt="Usuario" width="50" height="50" class="rounded-circle mb-3">
         {{/usuario}}
     </div>
 
-    <div class="history-container p-4 bg-white rounded shadow" style="max-width: 400px;">
+    <div class="history-container p-4 rounded shadow" style="max-width: 400px;">
         <h3 class="text-center">Historial de partidas</h3>
 
         <div class="d-flex justify-content-center align-items-center mb-3">
