--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -1,5 +1,5 @@
 <main class="flex-grow-1 d-flex align-items-center justify-content-center">
-    <div class="dashboard-container shadow p-4 bg-light rounded"
+    <div class="game-container shadow p-4 rounded"
          style="background-image: linear-gradient({{color}}, white);">
         {{#pregunta}}
             <div class="question-container text-center">
