editor pueda crear preguntas

--- a/view/crearPreguntaView.mustache
+++ b/view/crearPreguntaView.mustache
@@ -11,7 +11,7 @@
             </div>
         {{/success}}
         <h2 class="text-center mb-4">Crear Pregunta</h2>
-        <form method="post" action="/crearPreguntas/crear" id="formPreguntas">
+        <form method="post" action="/crearpreguntas/crear" id="formPreguntas">
 
             <div class="mb-3">
                 <label for="pregunta" class="form-label">Pregunta</label>
