--- a/view/homeView.mustache
+++ b/view/homeView.mustache
@@ -52,6 +52,11 @@
                 <button type="button" class="btn btn-info"
                         onclick="window.location.href='/editor/verPreguntasSugeridas'">Preguntas Sugeridas
                 </button>
+
+                <button type="button" class="btn btn-success mb-3 w-100" onclick="window.location.href='/crearpreguntas/form'">
+                    Crear Pregunta
+                </button>
+
             </div>
         </div>
     {{/editor}}
