arrego de validaciones

--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -6,7 +6,7 @@
     <div class="mx-2" style="max-height: 600px; max-width: 800px; overflow-y: auto; width: 100%;">
         <div class="table-responsive shadow">
             <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
-                <thead class="table-secondary">
+                <thead class="">
                 <tr class="align-middle">
                     <th>Ranking</th>
                     <th>Usuario</th>
