--- a/view/homeView.mustache
+++ b/view/homeView.mustache
@@ -19,7 +19,7 @@
         <button type="button" class="btn btn-success mb-3 w-100" onclick="window.location.href='/partida/ranking'">Ver
             ranking de usuarios
         </button>
-        <button type="button" class="btn btn-info mb-3 w-100" onclick="window.location.href='/crearpreguntas/form'">
+        <button type="button" class="btn btn-info mb-3 w-100" onclick="window.location.href='/crearPreguntas/form'">
             Crear Pregunta
         </button>
 
