--- a/view/header.mustache
+++ b/view/header.mustache
@@ -66,7 +66,7 @@
                     <a class="nav-link" href="#">Instrucciones</a>
                     <a class="nav-link" href="#">Contacto</a>
                     {{#logged_in}}
-                        <a class="nav-link" href="/usuario/search">Perfil</a>
+                        <a class="nav-link" href="/usuario/verPerfil">Perfil</a>
                     {{/logged_in}}
                 </div>
                 <div class="d-flex align-items-center ms-auto me-1">
