--- a/view/homeView.mustache
+++ b/view/homeView.mustache
@@ -10,7 +10,7 @@
     <div class="d-flex flex-wrap p-2 w-100 justify-content-center align-items-start">
     <div class="button-container d-flex flex-column align-items-center p-4 rounded shadow me-4"
          style="max-width: 200px;">
-        <button type="button" class="btn btn-danger mb-3 w-100" onclick="window.location.href='/usuario/search'">Ver
+        <button type="button" class="btn btn-danger mb-3 w-100" onclick="window.location.href='/usuario/verPerfil'">Ver
             perfil
         </button>
         <button type="button" class="btn btn-primary mb-3 w-100" id="nueva_partida" onclick="window.location.href='/partida/nueva'">
@@ -28,7 +28,7 @@
         <div class="dashboard-container shadow p-4 rounded">
             <div class="d-grid gap-1">
                 <button type="button" class="btn btn-danger mb-3 w-100"
-                        onclick="window.location.href='/usuario/search'">Ver perfil
+                        onclick="window.location.href='/usuario/verPerfil'">Ver perfil
                 </button>
                 <button type="button" class="btn btn-info" onclick="window.location.href='/admin/informes'">Ir a
                     informes
@@ -41,7 +41,7 @@
         <div class="dashboard-container shadow p-4 rounded">
             <div class="d-grid gap-1">
                 <button type="button" class="btn btn-danger mb-3 w-100"
-                        onclick="window.location.href='/usuario/search'">Ver perfil
+                        onclick="window.location.href='/usuario/verPerfil'">Ver perfil
                 </button>
                 <button type="button" class="btn btn-info" onclick="window.location.href='/editor/verPreguntas'">Todas
                     las Preguntas
